# Local_Alignment

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  test.cpp
include/: alignmentIO.hpp  localAligner.hpp  structs.hpp
input/: align_1.txt  align_2.txt
src/: alignmentIO.cpp  localAligner.cpp
